src/objects/IPM_Project_Document_Section__c.object
<CustomObject>
    <description>To be used in IPM project to store Gate Document Sections. It refers to the IPM Section object to pick what section/subsection it needs.</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>To store comments</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gate_With_Sequence__c</fullName>
        <formula>TEXT(IPM_Gate_Document__c) &amp; &apos; &apos; &amp;&apos;Gate&apos;&amp;&apos; &apos;&amp; IPM_Section_Sequence__c &amp; &apos; &apos; &amp; IPM_Section_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gate With Sequence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Assortment_CU__c</fullName>
        <description>To store the CU&apos;s selected for assortment channel</description>
        <label>IPM Assortment CU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Assortment_Channel__c</fullName>
        <description>To capture Assortment Channel name</description>
        <label>IPM Assortment Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Ahold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Channels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS Watson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auchan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carrefour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Club Stores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convenience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discounters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drug Stores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hypermarkets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impulse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Premise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schwarz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supermarkets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tesco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traditional Grocery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walmart</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Assortment_Date_From__c</fullName>
        <description>To capture Assortment Strategy From Date</description>
        <label>IPM_Assortment_Date_From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Assortment_Date_To__c</fullName>
        <description>To capture Assortment Strategy To Date</description>
        <label>IPM_Assortment_Date_To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Assortment_Distribution_Type__c</fullName>
        <description>This Distribution type is being used in &quot;Assortment Strategy&quot;</description>
        <inlineHelpText>This Distribution type is being used in &quot;Assortment Strategy&quot;</inlineHelpText>
        <label>IPM_Assortment_Distribution_Type</label>
        <picklist>
            <picklistValues>
                <fullName>Numeric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weightage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_CMI_Selected_Countries__c</fullName>
        <description>To capture the countries name where CMI conducted</description>
        <label>IPM CMI Selected Countries</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiji</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameroon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nigeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>IPM_CMI_Selected_Test_Concepts__c</fullName>
        <description>Stores the CMI selected test concepts</description>
        <label>IPM CMI Selected Test Concepts</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IPM_Channel_Name__c</fullName>
        <description>This capture Assortment Channel name</description>
        <label>IPM_Channel_Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Count_of_Comments__c</fullName>
        <defaultValue>0</defaultValue>
        <description>To Capture and store the Number of Comments per section. Required to show the Count on the Chatter Icon</description>
        <label>IPM_Count_of_Comments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_Customer_Channel_Info__c</fullName>
        <defaultValue>&quot;Experiential,Routine,Needs for Today&quot;</defaultValue>
        <description>To store the customer channel info</description>
        <label>IPM Customer Channel Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Default_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <description>default value od all sections</description>
        <label>IPM Default Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_DocSec_Project_Leader__c</fullName>
        <description>To capture project leader email id</description>
        <formula>IPM_Project_Document__r.IPM_Project__r.IPM_Project_Leader__r.Email</formula>
        <label>IPM Project Leader</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_FunctionalRole__c</fullName>
        <description>To store Functional Role of the section</description>
        <label>IPM_FunctionalRole</label>
        <picklist>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deputy Project Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gate Keeper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Functional_Input_Status__c</fullName>
        <description>To store function input status of section</description>
        <label>IPM Functional Input Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excluded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Functional_Input_or_Summary__c</fullName>
        <description>To store functional summary</description>
        <formula>IF( IPM_GateHistory_Date__c&gt; IPM_PDPHistoty_Date__c, &apos;Summary&apos;,&apos;Functional Input&apos;)</formula>
        <label>IPM Functional Input or Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_GateHistory_Date__c</fullName>
        <description>save last updated date of gate summary field</description>
        <label>IPM GateHistory Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IPM_GateHistory__c</fullName>
        <description>To store gate summary field history</description>
        <label>IPM GateHistory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Gate_Document_Summary__c</fullName>
        <description>To capture gate document summary</description>
        <label>Gate Document Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IPM_Gate_Document__c</fullName>
        <description>To store gate document name</description>
        <label>Gate Document</label>
        <picklist>
            <picklistValues>
                <fullName>Charter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Deployment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Has_Appendix__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To be check only if the section has related appendix</description>
        <label>Has Appendix</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Is_Excluded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>mark it to true if there are no tasks associated with a record.</description>
        <label>Is Excluded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Locale_Time__c</fullName>
        <description>To store locale time when function input summary saved</description>
        <formula>IF(CONTAINS(IPM_Functional_Input_or_Summary__c, &apos;Summary&apos;) ,SUBSTITUTE(TRIM( RIGHT(TEXT( IPM_GateHistory_Date__c),8)),&apos;Z&apos;,&apos;&apos;) ,SUBSTITUTE(TRIM( RIGHT(TEXT( IPM_PDPHistoty_Date__c),8)),&apos;Z&apos;,&apos;&apos;))</formula>
        <label>IPM Locale Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Master_Section_External_Id__c</fullName>
        <description>To store Master Section External Id</description>
        <label>Master Section External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Negotiable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field describes whether the section is required or not</description>
        <label>Negotiable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Notify_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For sending notification to project leader</description>
        <label>Notify Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_PDPHistoty_Date__c</fullName>
        <description>to save last updated date of gate pdp field</description>
        <label>IPM PDPHistoty Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IPM_PDPHistoty__c</fullName>
        <description>To store PDP summary field history</description>
        <label>IPM PDPHistoty</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_PDP_Document_Summary__c</fullName>
        <description>To store PDP document summary</description>
        <label>PDP Document Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IPM_Parent_Section_isNull__c</fullName>
        <description>This field informs if IPM_Section__r.IPM_Parent_Section__c is null or not</description>
        <inlineHelpText>This field informs if IPM_Section__r.IPM_Parent_Section__c is null or not</inlineHelpText>
        <label>IPM_Parent_Section_isNull</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_ProjectTemplate__c</fullName>
        <description>To Refer Document Template</description>
        <formula>CASESAFEID(IPM_Project_Document__r.IPM_Project_Template__c)</formula>
        <label>IPM ProjectTemplate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Document__c</fullName>
        <description>Relationship to Project Document</description>
        <label>IPM Project Document</label>
        <referenceTo>IPM_Project_Document__c</referenceTo>
        <relationshipLabel>IPM Project Document Sections</relationshipLabel>
        <relationshipName>IPM_Project_Sections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IPM_Project_ID__c</fullName>
        <description>To capture the project id</description>
        <formula>CASESAFEID(IPM_Project_Document__r.IPM_Project__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IPM Project ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Project_L_eader_Email__c</fullName>
        <description>Need to send email to project leader while updating document section</description>
        <label>IPM Project Leader Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Name__c</fullName>
        <description>To capture project name</description>
        <formula>IPM_Project_Document__r.IPM_Project__r.IPM_Project_Name__c</formula>
        <label>IPM Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Self Relationship to Project Document Section</description>
        <label>IPM Project Section</label>
        <referenceTo>IPM_Project_Document_Section__c</referenceTo>
        <relationshipLabel>IPM Project Document Sections</relationshipLabel>
        <relationshipName>IPM_Project_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Section_Help_Text_Long__c</fullName>
        <description>Contains section help text</description>
        <label>Section Help Text Long</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IPM_Section_Help_Text__c</fullName>
        <description>Contains section help text</description>
        <label>Section Help Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IPM_Section_Name__c</fullName>
        <description>Contains section name</description>
        <label>Section Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Section_Number__c</fullName>
        <description>To capture section number</description>
        <formula>VALUE(IPM_Section__r.IPM_Section_Sequence__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IPM Section Number</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_Section_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship to User</description>
        <label>Section Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IPM_Project_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Section_Sequence_Number__c</fullName>
        <description>Contains IPM Project Document Section Sequence Number</description>
        <label>IPM Section Sequence Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Section_Sequence__c</fullName>
        <description>To display section sequence number</description>
        <formula>IPM_Section__r.IPM_Section_Sequence__c</formula>
        <label>IPM_Section_Sequence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Section_Status__c</fullName>
        <description>To store section status</description>
        <label>IPM_Section_Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Filled-in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excluded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Section_Type__c</fullName>
        <description>To describe the type of section</description>
        <label>Section Type</label>
        <picklist>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Static Table</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Master Section object</description>
        <label>IPM Section</label>
        <referenceTo>IPM_Section__c</referenceTo>
        <relationshipLabel>IPM Project Sections</relationshipLabel>
        <relationshipName>IPM_Project_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Selected_Channel_Name__c</fullName>
        <description>To store the selected channel name</description>
        <label>IPM Selected Channel Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Selected_Consumer_Evidence_Countries__c</fullName>
        <description>To store the countries where consumer evidence conducted</description>
        <label>IPM Selected Consumer Evidence Countries</label>
        <picklist>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>IPM_Status_Icon__c</fullName>
        <description>To display section status icon</description>
        <formula>CASE( IPM_Section_Status__c, &quot;Not Started&quot;,  IMAGE(&quot;/resource/ipmResource/images/cone.png&quot;, &quot;Not Started&quot;,30,30), 
&quot;In Progress&quot;, IMAGE(&quot;/resource/ipmResource/images/cone.png&quot;, &quot;Not Started&quot;,30,30),
&quot;Submitted For Review&quot;, IMAGE(&quot;/resource/ipmResource/images/review.png&quot;, &quot;Not Started&quot;,25,25),
&quot;Approved&quot;, IMAGE(&quot;/resource/ipmResource/images/approve.png&quot;, &quot;Not Started&quot;,25,25),
&quot;Rejected&quot;, IMAGE(&quot;/resource/ipmResource/images/reject.png&quot;, &quot;Not Started&quot;,25,25),
&quot;Not Validated&quot;, IMAGE(&quot;/resource/ipmResource/images/warning.png&quot;, &quot;Not Started&quot;,25,25),
IMAGE(&quot;/resource/ipmResource/images/cone.png&quot;, &quot;Not Started&quot;,25,25))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IPM Status Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Summary_Character_Remaining__c</fullName>
        <description>To display the number of characters remaining in gate document summary</description>
        <label>IPM Summary Character Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_User_Id__c</fullName>
        <description>To store project leader user id</description>
        <formula>IPM_Project_Document__r.IPM_Project__r.IPM_Project_Leader__c</formula>
        <label>IPM User Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Version_Number__c</fullName>
        <description>Contains section version number</description>
        <label>Version Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Input__c</fullName>
        <description>To capture CMI input</description>
        <label>Input</label>
        <picklist>
            <picklistValues>
                <fullName>Salience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attraction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relevance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expensiveness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Differentiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Point of Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overall liking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Attributes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>shelf visibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>shelf findability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>shelf purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>package communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Persuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awareness Index</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVM (Concept Viability Measure)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_IPM_Global_Consolidated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To show global consolidated component</description>
        <label>Is IPM Global Consolidated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Doc_Section_Ext_Id__c</fullName>
        <description>For data loading from external source</description>
        <externalId>true</externalId>
        <label>Project Doc Section Ext Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Results__c</fullName>
        <description>For capturing CMI results</description>
        <label>Results</label>
        <picklist>
            <picklistValues>
                <fullName>Failure (=&lt; 33%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risky (34% - 69%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfactory (70% - 84%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding (&gt;= 85%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Win</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possible Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottom 30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid 40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top 30%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>IPM Project Document Section</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>IPM_Section__c</columns>
        <columns>IPM_Section_Sequence_Number__c</columns>
        <columns>IPM_Section_Sequence__c</columns>
        <columns>IPM_Project_Document__c</columns>
        <columns>IPM_Project_Section__c</columns>
        <columns>IPM_Section_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Section Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IPM Project Document Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>